# SmartDesk-LifeEasy

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ci_backup.yml  pre_push_check.sh  publish_package.bat  pyproject.toml  requirements.txt  setup.py  structure.txt
.github/workflows/: ci.yml  publish.yml
docs/: index.md  installation.md  usage.md
smartdesk/: cli.py
smartdesk/finance/: expense_manager.py  visualizer.py
smartdesk/info/: weather.py
smartdesk/tasks/: manager.py  models.py  storage.py
tests/: test_expense.py  test_tasks.py
